# advent-of-code

./: .gitignore  .pre-commit-config.yaml  README.md  REPORT.md  pyproject.toml  tests.toml
2016/python/: day_01_no_time_for_a_taxicab.py  day_04_security_through_obscurity.py  day_05_how_about_a_nice_game_of_chess.py  day_06_signals_and_noise.py  day_08_twofactor_authentication.py  day_09_explosives_in_cyberspace.py
2016/rust/: Cargo.toml
2017/elixir/test/: day_01_inverse_captcha_test.exs
aoc/: __init__.py  __main__.py
aoc/langs/elixir/: spec.json
aoc/langs/elixir/base/: mix.exs
aoc/langs/python/: runner.py  spec.json  template.py
aoc/langs/rust/: Cargo.toml  spec.json
doc/: TODO.md
python/: aoc2016.py  day_01_no_time_for_a_taxicab.py  day_02_bathroom_security.py  day_03_squares_with_three_sides.py  day_04_security_through_obscurity.py  day_05_how_about_a_nice_game_of_chess.py  day_06_signals_and_noise.py  day_07_internet_protocol_version_7.py  day_08_twofactor_authentication.py  problem_template.py
rust/: Cargo.toml
rust/src/: lib.rs  problem_template.rs
scripts/: elixir.sh  go.sh  go_lint.sh  haskell.sh
solutions/2016/python/: day_02_solution.py  day_03_solution.py  day_07_solution.py
solutions/2016/rust/: Cargo.toml
solutions/2017/elixir/: README.md  mix.exs
solutions/2017/python/: day_01_solution.py
solutions/2018/elixir/: mix.exs
solutions/2018/python/: day_01_solution.py  day_03_solution.py
solutions/2018/rust/: Cargo.toml
solutions/2022/rust/: Cargo.toml
solutions/2023/elixir/: mix.exs
solutions/haskell/2017/01/: aoc.cabal
solutions/haskell/2017/01/app/: Main.hs
solutions/haskell/2025/05/: aoc.cabal
solutions/haskell/2025/05/app/: Main.hs
solutions/haskell/2025/08/: aoc.cabal  cabal.project
solutions/haskell/2025/08/app/: Main.hs
solutions/haskell/2025/09/: aoc.cabal
solutions/haskell/2025/09/app/: Main.hs
tests/2022/05/: tests_2022_05.toml
tests/2022/06/: tests_2022_06.toml
tests/2022/08/: tests_2022_08.toml
tests/2022/12/: tests_2022_12.toml
tests/2022/14/: tests_2022_14.toml
tests/2022/16/: tests_2022_16.toml
tests/2022/17/: tests_2022_17.toml
tests/2022/18/: tests_2022_18
tests/2023/01/: tests.toml
tests/2023/02/: tests.toml
tests/2023/03/: tests.toml
tests/2023/04/: tests.toml
tests/2023/05/: tests.toml
tests/2023/06/: tests.toml
tests/2023/07/: tests.toml
tests/2023/08/: tests.toml
tests/2023/09/: tests.toml
tests/2023/10/: tests.toml
tests/2023/11/: tests.toml
tests/2023/12/: tests.toml
tests/2023/13/: tests.toml
tests/2023/14/: tests.toml
tests/2023/15/: tests.toml
tests/2023/16/: tests.toml
tests/2023/17/: tests.toml
tests/2023/18/: tests.toml
tests/2023/19/: tests.toml
tests/2023/20/: tests.toml
tests/2023/21/: tests.toml
tests/2023/22/: tests.toml
tests/2023/23/: tests.toml
tests/2023/24/: tests.toml
tests/2023/25/: tests.toml
tests/2024/04/: tests_2024_04.toml
tests/2024/10/: tests_2024_10.toml
tests/2024/11/: tests_2024_11.toml
tests/2024/12/: tests_2024_12.toml
(+180 files in other folders)
